# Homework_Django

./: .gitignore  README.md  catalog.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: blog_base.html  blogs_create.html  blogs_delete.html  blogs_detail.html  blogs_list.html  blogs_update.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  detail_list.html  header.html  home.html  menu_nav.html  product_create.html  product_delete.html  product_info.html  product_list.html  product_update.html
config/: settings.py  urls.py
static/js/: color-modes.js
